--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div id="container" >
 	<header><h1 title="I'm a tooltip!" style="color:orchid">Hello</h1></header>
 	<h2 title="I'm a tooltip too.">Thank you for looking at this <i>website</i></h2>
-	<h3 title="I am a tooltip as well.">These are pictures of my cats, Cheetoh, and Anya.</h3>
+	<h3 title="I am a tooltip as well.">These are pictures of my cats, <i style="color:orchid">Cheetoh</i>, and <i style=color:orchid>Anya</i>.</h3>
 	<nav class="floatLeft"><p title="I'm a tooltip also.">Cheetoh is the cat shown <b>twice</b>, Anya is the one with the <b>dark</b> ears and nose.</p></nav>
 	<main id="main" class="floatLeft"><img src="demo.jpeg" style="width:300px;" alt="Cloning a GitHub site"/></main>
 	<main class="floatLeft"><img src="dem2.jpeg" style="width:150px;" alt="Cloning a GitHub"/></main>
