--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	<h2 title="I'm a tooltip too.">Thank you for looking at this <i>website</i></h2>
 	<h3 title="I am a tooltip as well.">These are pictures of my cats, <i style="color:orchid">Cheetoh</i>, and <i style=color:orchid>Anya</i>.</h3>
 	<nav class="floatLeft"><p title="I'm a tooltip also.">Cheetoh is the cat shown <b>twice</b>, Anya is the one with the <b>dark</b> ears and nose.</p></nav>
-	<main id="main" class="floatLeft"><img src="demo.jpeg" style="width:300px;" alt="Cloning a GitHub site"/></main>
-	<main class="floatLeft"><img src="dem2.jpeg" style="width:150px;" alt="Cloning a GitHub"/></main>
-	<main class="floatLeft"><img src="dem3.jpeg" style="width:150px;" alt="Cloning a GitHub"/></main>
+	<main id="main" class="floatLeft"><img src="images/demo.jpeg" style="width:300px;" alt="Cloning a GitHub site"/></main>
+	<main class="floatLeft"><img src="images/dem2.jpeg" style="width:150px;" alt="Cloning a GitHub"/></main>
+	<main class="floatLeft"><img src="images/dem3.jpeg" style="width:150px;" alt="Cloning a GitHub"/></main>
 	<footer>Copyright Zoey Bayer 2025</footer>
 		
 
