--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Zoey's Project</title>
+<link rel="stylesheet" href="main.css">
 <style>
 	*{box-sizing: border-box;}
 	#container{
-		width:800px; background-color:thistle; height 600px; margin:0 auto;
+		width:800px; background-color:thistle; height:600px; margin:0 auto;
 	}
 	p{
 		color:white;
