--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Zoey's Project</title>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="assets/main.css">
 <style>
 	*{box-sizing: border-box;}
 	#container{
@@ -30,7 +30,7 @@
 	</head>
 <body>
 	<div id="container" >
-	<header><h1 title="I'm a tooltip!" style="color:orchid">Hello</h1></header>
+	<header><h1 title="I'm a tooltip!">Hello</h1></header>
 	<h2 title="I'm a tooltip too.">Thank you for looking at this <i>website</i></h2>
 	<h3 title="I am a tooltip as well.">These are pictures of my cats, <i style="color:orchid">Cheetoh</i>, and <i style=color:orchid>Anya</i>.</h3>
 	<nav class="floatLeft"><p title="I'm a tooltip also.">Cheetoh is the cat shown <b>twice</b>, Anya is the one with the <b>dark</b> ears and nose.</p></nav>
